# interview-memory-coach

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  smoke_test.py  test_coach.py
src/coach/: loop.py
src/memory/: store.py
